# hunav_webots_wrapper

./: CMakeLists.txt  README.md  hunav_plugin.xml  package.xml
config/: agents_factory.yaml  agents_hall.yaml  agents_office.yaml
include/hunav_webots_wrapper/: HuNavPlugin.hpp  WorldGenerator.hpp
launch/: hunavsim_launch_factory.py  hunavsim_launch_hall.py  hunavsim_launch_office.py  hunavsim_webots.launch.py
maps/: factory.yaml  hall.yaml  office.pgm  office.rviz  office.yaml
resource/: default.rviz  nav2_params.yaml  ros2_control.yml  tiago_webots.urdf
resource/maps/: factory_map.pgm  factory_map.yaml  hall_map.pgm  hall_map.yaml  office_map.yaml
scenarios/: agents_factory.yaml  agents_hall.yaml  agents_office.yaml
src/: HuNavPlugin.cpp  WorldGenerator.cpp
worlds/: factory.wbt  hall.wbt  office.wbt
