<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hunav_webots_wrapper</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="andresmarsil77@gmail.com">adren</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>webots_ros2_driver</depend>
  <depend>pluginlib</depend>
  <depend>hunav_msgs</depend>
  <depend>tinyxml2_vendor</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
